--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuqs": "^2.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0"
